# Matched-Time-Splitting-3D

./: CMakeLists.txt  README  README.md  folder_generator.py  makefile  myscript.sh  set_paras.py
MADI_3D.xcodeproj/: project.pbxproj
MADI_3D.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MADI_3D.xcodeproj/project.xcworkspace/xcuserdata/wei.xcuserdatad/: UserInterfaceState.xcuserstate
MADI_3D.xcodeproj/xcuserdata/wei.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
MADI_3D.xcodeproj/xcuserdata/wei.xcuserdatad/xcschemes/: MADI_3D.xcscheme  xcschememanagement.plist
MIB_3D.xcodeproj/: project.pbxproj
MIB_3D.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MIB_3D.xcodeproj/project.xcworkspace/xcuserdata/wei.xcuserdatad/: UserInterfaceState.xcuserstate
MIB_3D.xcodeproj/xcuserdata/wei.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
data/: data1.txt  data10.txt  data11.txt  data12.txt  data2.txt  data3.txt  data4.txt  data5.txt  data6.txt  data7.txt  data8.txt  data9.txt  data_example.txt
example/: config.txt
src/: Beta.h  Beta_0.cpp  Beta_0.h  Beta_1.cpp  Beta_1.h  Beta_2.cpp  Beta_2.h  Beta_3.cpp  Beta_3.h  Beta_4.cpp  Beta_4.h  Constant.h  Data.cpp  Data.h  Douglas_ADI.cpp  Douglas_ADI.h  Eq_0.cpp  Eq_0.h  Eq_1.cpp  Eq_1.h  Eq_2.cpp  Eq_2.h  Eq_3.cpp  Eq_3.h  Eq_4.cpp  Eq_4.h  Eq_5.cpp  Eq_5.h  Eq_6.cpp  Eq_6.h  Eq_7.cpp  Eq_7.h  Equation.cpp  Equation.h  Intersections.cpp  Intersections.h  LOD.cpp  LOD.h  LU.cpp  LU.h  (+31 more)
src/configuration/: read_config.cc  read_config.h  write_config.h
src/data/: data.cc  data.h  data_type.h
src/decomposition/: lu.cc  lu.h
src/diffusion/: beta.h  beta_0.cc  beta_0.h  beta_1.cc  beta_1.h  beta_2.cc  beta_2.h  beta_3.cc  beta_3.h  beta_4.cc  beta_4.h
src/equation/: eq_0.cc  eq_0.h  eq_1.cc  eq_1.h  eq_2.cc  eq_2.h  eq_3.cc  eq_3.h  eq_4.cc  eq_4.h  eq_5.cc  eq_5.h  eq_6.cc  eq_6.h  eq_7.cc  eq_7.h  equation.cc  equation.h
src/mesh/: mesh.cc  mesh.h
src/spatial/: intersection.cc  intersection.h
src/surface/: surface_cartesian.cc  surface_cartesian.h  surface_cone.cc  surface_cone.h  surface_cube.cc  surface_cube.h  surface_cylinder.cc  surface_cylinder.h  surface_dupin_cyclide.cc  surface_dupin_cyclide.h  surface_ellipsoid.cc  surface_ellipsoid.h  surface_heart.cc  surface_heart.h  surface_molecular.cc  surface_molecular.h  surface_pile.cc  surface_pile.h  surface_tanglecube.cc  surface_tanglecube.h  surface_torus.cc  surface_torus.h
src/temporal/: douglas_adi.cc  douglas_adi.h  lod.cc  lod.h  trapezoidal.cc  trapezoidal.h
util/: draw_surface.m  folder_generator.py  get_results.sh  myscript.sh  perf.sh
(+2 files in other folders)
